feat/Ajout d'une card correspondant à un trajet plus le layout sous forme de grid pour la page search.html

--- a/search.html
+++ b/search.html
@@ -25,10 +25,69 @@
                   </div>
             </nav>
       </header>
-      <main>
+      <main class="container">
+            <div class="search">
+                  <div class="search__nav">
+
+                  </div>
+                  <div class="search__grid">
+                        <div class="search__grid-item">
+                              <div class="search__item-travel">
+                                    <div class="search__item-travel-img">
+                                          <img src="img/Travel.svg" alt="">
+                                    </div>
+                                    <div class="search__item-travel-content">
+                                          <div class="search__travel-depart">
+                                                <p>7h50</p>
+                                                <p>Adresse départ</p>
+                                          </div>
+                                          <div class="search__travel-depart">
+                                                <p>Adresse arrivée</p>
+                                                <p>8h20</p>
+                                          </div>
+                                    </div>
+                              </div>
+                              <div class="search__item-user">
+                                    <div class="search__user-profile">
+                                          <div class="search__user-profile-basic">
+                                                <div class="search__user-img"></div>
+                                                <div class="search__user-info">
+                                                      <p>Nom</p>
+                                                      <p>Prenom</p>
+                                                </div>
+                                          </div>
+
+                                          <div class="search__user-score">
+                                                <p>Note :</p>
+                                                <div class="search__user-score-stars"></div>
+                                          </div>
 
 
+                                    </div>
+                                    <div class="search__user-stats">
+                                          <div class="search__user-stats-item">
+                                                <p>Temps de réponse moyen:</p>
+                                                <p>1 hr</p>
+                                          </div>
+                                          <div class="search__user-stats-item">
+                                                <p>Nombre de trajets effectués:</p>
+                                                <p>19</p>
+                                          </div>
 
+                                    </div>
+                                    <div class="search__user-preferences">
+                                          <div class="search__user-preferences-item">
+                                                <p>fumeur</p>
+                                          </div>
+                                          <div class="search__user-preferences-item">
+                                                <p>bavard</p>
+                                          </div>
+                                    </div>
+                              </div>
+
+                        </div>
+                  </div>
+            </div>
       </main>
       <footer class="container">
             <div class="footer">
